Fix inconsistent label heights caused by a slightly taller popover component on the same row (also change width to the same just because otherwise the focus state looks squashed)

--- a/resources/css/components/popover.css
+++ b/resources/css/components/popover.css
@@ -57,7 +57,7 @@
 .rotating-dots-button {
     @apply flex items-center justify-center rounded-full text-gray-700 dark:text-dark-150;
     height: 20px;
-    width: 24px;
+    width: 20px;
 
     &:hover {
         @apply text-gray-950 dark:text-dark-100;
